--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "mysql2": "^1.7.0",
+    "newrelic": "^6.1.0",
     "nodemon": "^1.19.4",
     "path": "^0.12.7",
     "react": "^16.10.2",
